[package]
name = "lapce-php-intelephense"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { path = "../lapce-plugin-rust" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
